mod with swagger (autogenerated)